✨ [fix] 지난 여행 보기 API 수정